.provarCaches/00D5f000005vwGkEAI/objects/rstk__poconttype__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_poconttype</customHelpPage>
    <description>poconttype__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poconttype_div__r.rstk__sydiv_div__c + &apos;_&apos; +  rstk__poconttype_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poconttype_type__c + &apos; (&apos; + LEFT( rstk__poconttype_desc__c , (77 - LEN(rstk__poconttype_type__c)) ) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poconttype_type__c + &apos; &apos; +  rstk__poconttype_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconttype_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconttype_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Shipment Container Type</relationshipLabel>
        <relationshipName>divpoconttypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poconttype_temcontrol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temperature Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poconttype_type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipment Container Type</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Shipment_Container_Type</fullName>
        <columns>NAME</columns>
        <columns>rstk__poconttype_div__c</columns>
        <columns>rstk__poconttype_type__c</columns>
        <columns>rstk__poconttype_desc__c</columns>
        <columns>rstk__poconttype_temcontrol__c</columns>
        <filterScope>Everything</filterScope>
        <label>Shipment Container Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Container Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Division_cannot_change</fullName>
        <active>true</active>
        <description>Division cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(rstk__poconttype_div__c)</errorConditionFormula>
        <errorMessage>Division cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Type</fullName>
        <active>true</active>
        <description>Validation Container Type</description>
        <errorConditionFormula>ISCHANGED( rstk__poconttype_type__c )</errorConditionFormula>
        <errorMessage>Container Type Change Not Allowed</errorMessage>
    </validationRules>
</CustomObject>